--- a/wechat-shopping-bussiness/.gitignore
+++ b/wechat-shopping-bussiness/.gitignore
@@ -1,13 +1,14 @@
-*.class
 .classpath
 .project
-.settings/
-.buildpath
+.settings
+.springBeans
+.svn
 .DS_Store
-logs
-target/
-work/
-node_modules/
-node/
-.idea/
 *.iml
+
+/.idea
+/bin
+/logs
+/*/logs
+/target
+/*/target
